[FIX] sign: adapt for dark-mode
Prior to this commit Sign's table cells background were forced to "raw
white", making text unreadable in dark-mode.

This commit will set it equal to `$o-view-background-color`, a variable
that stay `#FFF` in bright-mode while switching to the right gray value
in dark-mode

task-3012970

closes odoo/enterprise#32740

X-original-commit: dac8f5a6d029965065bd73aff48cf88ca1ccbedd
Related: odoo/odoo#103118

--- a/sign/static/src/scss/sign_backend.scss
+++ b/sign/static/src/scss/sign_backend.scss
@@ -32,8 +32,8 @@
             table {
                 border-collapse: initial;
                 border: none;
-                --table-hover-bg: white;
-                --table-striped-bg: white;
+                --table-hover-bg: #{$o-view-background-color};
+                --table-striped-bg: #{$o-view-background-color};
             }
             thead > tr > th {
                 border: none;
